@@ -6,13 +6,16 @@ import com.denimgroup.threadfix.data.entities.RemoteProviderApplication;
 import com.denimgroup.threadfix.data.entities.Scan;
 import com.denimgroup.threadfix.data.entities.ScannerType;
 import com.denimgroup.threadfix.exception.RestIOException;
-import com.denimgroup.threadfix.importer.impl.remoteprovider.utils.*;
+import com.denimgroup.threadfix.importer.impl.remoteprovider.utils.HttpResponse;
+import com.denimgroup.threadfix.importer.impl.remoteprovider.utils.RemoteProviderHttpUtils;
+import com.denimgroup.threadfix.importer.impl.remoteprovider.utils.RemoteProviderHttpUtilsImpl;
+import com.denimgroup.threadfix.importer.impl.remoteprovider.utils.RequestConfigurer;
 import org.apache.commons.httpclient.HttpMethodBase;
-import org.eclipse.jgit.util.Base64;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
+import javax.xml.bind.DatatypeConverter;
 import java.util.Calendar;
 import java.util.List;
 import java.util.Map;
@@ -214,7 +217,7 @@ public class ContrastRemoteProvider extends AbstractRemoteProvider {
         assert serviceKey != null : "Service Key was null.";
 
         byte[] bytes = (username + ":" + serviceKey).getBytes();
-        final String encoded = Base64.encodeBytes(bytes);
+        final String encoded = DatatypeConverter.printBase64Binary(bytes);
 
         return new RequestConfigurer() {
             @Override
